fix on mobile

--- a/css/simple-grid.scss
+++ b/css/simple-grid.scss
@@ -1,12 +1,8 @@
-/* BUGS
-  - unfix bg
-*/ 
-
 // SIMPLE GRID FRAMEWORK
 // simplegrid.io
 
 // fonts
-$font-family: 'Work Sans', sans-serif;
+$font-family: "Work Sans", sans-serif;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-heavy: 700;
@@ -18,8 +14,7 @@ $dark-gray: #333447; // for the Americans
 
 $primary: #009be2;
 $secondary: #ff8800;
-
-
+$selection: #ff880042;
 
 // universal
 
@@ -32,7 +27,7 @@ body {
   left: 0;
   top: 0;
   font-size: 100%;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
 
 * {
@@ -42,10 +37,14 @@ body {
   overflow-x: hidden;
 }
 
+::selection {
+  background-color: $selection;
+}
+
 li {
   list-style-type: none;
   list-style: none;
-  line-height: 2.30;
+  line-height: 2.3;
 }
 
 img {
@@ -80,15 +79,15 @@ h6 {
 }
 
 p {
-  font-size: calc(1.200rem + .03vw);
+  font-size: calc(1.2rem + 0.03vw);
   font-weight: 200;
   line-height: 1.8;
 }
 
 a {
   font-size: 1.2rem;
-  text-decoration:underline;
-  text-decoration:none; 
+  text-decoration: underline;
+  text-decoration: none;
   color: $secondary;
 }
 
@@ -132,7 +131,7 @@ a {
 
 $width: 96%;
 $gutter: 4%;
-$breakpoint-small: 18.80em; // 540px
+$breakpoint-small: 18.8em; // 540px
 $breakpoint-med: 45em; // 720px
 $breakpoint-large: 60em; // 960px
 
@@ -161,7 +160,7 @@ $breakpoint-large: 60em; // 960px
   margin-top: 3%;
   margin-bottom: 3%;
   margin-left: 1.5%;
-  display:block;
+  display: block;
   min-height: 0.125rem;
 }
 
@@ -186,48 +185,94 @@ $breakpoint-large: 60em; // 960px
   width: $width;
 }
 
-.col-1-sm { width:($width / 12) - ($gutter * 11 / 12); }
-.col-2-sm { width: ($width / 6) - ($gutter * 10 / 12); }
-.col-3-sm { width: ($width / 4) - ($gutter * 9 / 12); }
-.col-4-sm { width: ($width / 3) - ($gutter * 8 / 12); }
-.col-5-sm { width: ($width / (12 / 5)) - ($gutter * 7 / 12); }
-.col-6-sm { width: ($width / 2) - ($gutter * 6 / 12); }
-.col-7-sm { width: ($width / (12 / 7)) - ($gutter * 5 / 12); }
-.col-8-sm { width: ($width / (12 / 8)) - ($gutter * 4 / 12); }
-.col-9-sm { width: ($width / (12 / 9)) - ($gutter * 3 / 12); }
-.col-10-sm { width: ($width / (12 / 10)) - ($gutter * 2 / 12); }
-.col-11-sm { width: ($width / (12 / 11)) - ($gutter * 1 / 12); }
-.col-12-sm { width: $width; }
+.col-1-sm {
+  width: ($width / 12) - ($gutter * 11 / 12);
+}
+.col-2-sm {
+  width: ($width / 6) - ($gutter * 10 / 12);
+}
+.col-3-sm {
+  width: ($width / 4) - ($gutter * 9 / 12);
+}
+.col-4-sm {
+  width: ($width / 3) - ($gutter * 8 / 12);
+}
+.col-5-sm {
+  width: ($width / (12 / 5)) - ($gutter * 7 / 12);
+}
+.col-6-sm {
+  width: ($width / 2) - ($gutter * 6 / 12);
+}
+.col-7-sm {
+  width: ($width / (12 / 7)) - ($gutter * 5 / 12);
+}
+.col-8-sm {
+  width: ($width / (12 / 8)) - ($gutter * 4 / 12);
+}
+.col-9-sm {
+  width: ($width / (12 / 9)) - ($gutter * 3 / 12);
+}
+.col-10-sm {
+  width: ($width / (12 / 10)) - ($gutter * 2 / 12);
+}
+.col-11-sm {
+  width: ($width / (12 / 11)) - ($gutter * 1 / 12);
+}
+.col-12-sm {
+  width: $width;
+}
 
 @media only screen and (min-width: $breakpoint-med) {
-  .col-1 { width:($width / 12) - ($gutter * 11 / 12); }
-  .col-2 { width: ($width / 6) - ($gutter * 10 / 12); }
-  .col-3 { width: ($width / 4) - ($gutter * 9 / 12); }
-  .col-4 { width: ($width / 3) - ($gutter * 8 / 12); }
-  .col-5 { width: ($width / (12 / 5)) - ($gutter * 7 / 12); }
-  .col-6 { width: ($width / 2) - ($gutter * 6 / 12); }
-  .col-7 { width: ($width / (12 / 7)) - ($gutter * 5 / 12); }
-  .col-8 { width: ($width / (12 / 8)) - ($gutter * 4 / 12); }
-  .col-9 { width: ($width / (12 / 9)) - ($gutter * 3 / 12); }
-  .col-10 { width: ($width / (12 / 10)) - ($gutter * 2 / 12); }
-  .col-11 { width: ($width / (12 / 11)) - ($gutter * 1 / 12); }
-  .col-12 { width: $width; }
+  .col-1 {
+    width: ($width / 12) - ($gutter * 11 / 12);
+  }
+  .col-2 {
+    width: ($width / 6) - ($gutter * 10 / 12);
+  }
+  .col-3 {
+    width: ($width / 4) - ($gutter * 9 / 12);
+  }
+  .col-4 {
+    width: ($width / 3) - ($gutter * 8 / 12);
+  }
+  .col-5 {
+    width: ($width / (12 / 5)) - ($gutter * 7 / 12);
+  }
+  .col-6 {
+    width: ($width / 2) - ($gutter * 6 / 12);
+  }
+  .col-7 {
+    width: ($width / (12 / 7)) - ($gutter * 5 / 12);
+  }
+  .col-8 {
+    width: ($width / (12 / 8)) - ($gutter * 4 / 12);
+  }
+  .col-9 {
+    width: ($width / (12 / 9)) - ($gutter * 3 / 12);
+  }
+  .col-10 {
+    width: ($width / (12 / 10)) - ($gutter * 2 / 12);
+  }
+  .col-11 {
+    width: ($width / (12 / 11)) - ($gutter * 1 / 12);
+  }
+  .col-12 {
+    width: $width;
+  }
 
   .hidden-sm {
     display: block;
   }
 }
 
-
 // custom proprety
-
 
 .navbar {
   text-decoration: underline;
-  text-decoration:none; 
+  text-decoration: none;
   a {
     margin-left: 30px;
-    text-decoration:none; 
+    text-decoration: none;
   }
   img {
     width: 120px;
@@ -238,11 +283,10 @@ $breakpoint-large: 60em; // 960px
 .sommary {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  
+
   li {
     line-height: 3;
   }
-
 }
 
 .documentation_section {
@@ -254,7 +298,7 @@ $breakpoint-large: 60em; // 960px
   }
 
   a {
-    font-size: 1.200rem;
+    font-size: 1.2rem;
     color: $secondary;
   }
 }
@@ -268,7 +312,7 @@ $breakpoint-large: 60em; // 960px
   top: -10vh;
   left: -9vh;
   width: 1050vw;
-  height: 100vh; 
+  height: 100vh;
 }
 
 .bg_orange-blue-green {
@@ -279,7 +323,7 @@ $breakpoint-large: 60em; // 960px
   top: -40vh;
   left: -30vh;
   width: 1050vw;
-  height: 100vh; 
+  height: 100vh;
 }
 
 .bg_orange-yellow {
@@ -290,10 +334,10 @@ $breakpoint-large: 60em; // 960px
   top: -50vh;
   left: -30vh;
   width: 1050px;
-  height: 100vh; 
+  height: 100vh;
 }
 
-// card 
+// card
 
 .card {
   background-color: #f8f8f8b7;
@@ -307,33 +351,31 @@ $breakpoint-large: 60em; // 960px
   position: relative;
   overflow: hidden;
   text-decoration: underline;
-  text-decoration:none; 
-  border: solid 1px #dadada; 
+  text-decoration: none;
+  border: solid 1px #dadada;
   img {
     width: 50px;
   }
   a {
     text-decoration: underline;
-    text-decoration:none; 
+    text-decoration: none;
   }
 }
-
 
 // for devices
 
 @media only screen and (min-width: 320px) {
-  * {
-    overflow-x:hidden;
+  img {
+    display: none;
   }
-.container {
+  .container {
     width: 90%;
-    margin-right:auto;
-    margin-left:auto;
+    margin-right: auto;
+    margin-left: auto;
   }
-.bg_violet-blue {
-  width: 180vw;
-  top: -35vw;
-  left: 20vw;
+  .bg_violet-blue {
+    width: 180vw;
+    top: -35vw;
+    left: 20vw;
+  }
 }
-}
-
